# ubuntu-autoinstall-agent

./: .gitignore  .golangci.yml  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  .pylintrc  .python-black  .yaml-lint.yml  CHANGELOG.md  CODING_AGENT_INSTRUCTIONS.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DESIGN.md  IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  TODO.md  build-cross-platform.sh  build-on-linux.sh  clippy.toml  pytest.ini  ruff.toml  rustfmt.toml  super-linter-ci.env  super-linter-pr.env
.cargo/: config.toml
.github/: CLAUDE.md  CODEOWNERS  README.md  SECURITY_CHECKLIST.md  copilot-instructions.md  dependabot.yml  intelligent-labeling.yml  labeler.yml  repository-config.yml  security-guidelines.md  semantic-release-package.json  semantic-release.config.json  setup-repository.sh  unified-automation-config.json  update-copilot-instructions.sh  validate-setup.sh  workflow-config.yaml
.github/doc-updates/: 2025-09-15-rust-instructions-ci-requirements.json
.github/instructions/: commit-messages.instructions.md  general-coding.instructions.md  github-actions.instructions.md  go.instructions.md  html-css.instructions.md  javascript.instructions.md  json.instructions.md  markdown.instructions.md  protobuf.instructions.md  pull-request-descriptions.instructions.md  python.instructions.md  r.instructions.md  rust-utility.instructions.md  rust.instructions.md  safe-ai-util.instructions.md  security.instructions.md  shell.instructions.md  test-generation.instructions.md  typescript.instructions.md
.github/linters/: .golangci.yml  README.md  clippy.toml  rustfmt.toml  super-linter-ci.env  super-linter-pr.env
.github/schemas/: repository-config.schema.json
.github/scripts/: README.md  ai-rebase.sh  ci-status.sh  detect-build-matrix.py  detect_languages.py  determine-security-languages.py  docker-detect.py  docker-security.py  find-conflicted-prs.js  monitor-rollout.py  parse_config_json.py  pr-linter-comment.js  process-conflicted-prs.js  run_buf_generate.py  super-linter-pr-comment.js  sync-auto-commit.py  sync-complete-workflow-modernizer.py  sync-make-scripts-executable.sh  sync-receiver-check-changes.py  sync-receiver-commit-push.py  sync-receiver-generate-summary.py  sync-receiver-sync-files.py  sync-release-build-artifacts.py  sync-release-create-package-json.py  sync-release-create-semantic-config.py  sync-release-detect-language.py  sync-release-determine-version.py  sync-release-handle-manual-release.py  sync-release-run-semantic-release.py  sync-release-upload-artifacts.py  sync-workflow-modernizer.py
.github/workflows/: README.md  ci.yml  release-docker.yml  release-frontend.yml  release-go.yml  release-javascript.yml  release-protobuf.yml  release-python.yml  release-rust.yml  release-typescript.yml  release.yml  reusable-ci.yml  reusable-release.yml  sync-receiver.yml  workflow-scripts-tests.yml
examples/configs/: arm64-server.yaml  basic-server.yaml  len-serv-003.yaml  production-cluster.yaml  production-server.yaml
examples/specs/: ubuntu-24.04-full.yaml  ubuntu-24.04-minimal.yaml  ubuntu-24.04-secure.yaml
scripts/: create-autoinstall-iso.sh
src/: config.rs  error.rs  executor.rs  lib.rs  logger.rs  main.rs  main_legacy.rs  utils.rs
src/cli/: args.rs  commands.rs  mod.rs
src/commands/: awk.rs  buf.rs  editor.rs  file.rs  git.rs  linter.rs  mod.rs  prettier.rs  python.rs  sed.rs  system.rs  uutils.rs
src/config/: generator.rs  image.rs  loader.rs  mod.rs  target.rs  validator.rs
src/image/: builder.rs  customizer.rs  deployer.rs  manager.rs  (+1 more)
tests/: integration_test.rs
(+61 files in other folders)
