[package]
name = "ubuntu-autoinstall-agent"
version = "1.0.0"
edition = "2021"
description = "Comprehensive Ubuntu Server auto-installer with ZFS encryption and error recovery"
authors = ["JF <jf@example.com>"]
license = "MIT"
repository = "https://github.com/jdfalk/ubuntu-autoinstall-agent"
keywords = ["ubuntu", "autoinstall", "zfs", "encryption", "automation"]
categories = ["command-line-utilities", "system-administration"]
rust-version = "1.70"

[[bin]]
name = "ubuntu-autoinstall-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env", "color"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "std"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
which = "6.0"
regex = "1.10"
colored = "2.1"
indicatif = "0.17"
crossterm = "0.27"
shellexpand = "3.1"
env_logger = "0.10"
log = "0.4"
fs_extra = "1.3"
walkdir = "2.4"
ignore = "0.4"
tempfile = "3.8"

# Additional dependencies for auto-installer
reqwest = { version = "0.12", features = ["json", "stream"] }
subprocess = "0.2"
sysinfo = "0.32"
network-interface = "2.0"
rand = "0.8"
validator = { version = "0.18", features = ["derive"] }
# Cryptographic dependencies
sha2 = "0.10"
pbkdf2 = "0.12"
base64 = "0.22"
hex = "0.4"
url = "2.5"
libc = "0.2"
# Unix utilities integration - using system commands with fallbacks
# uucore provides shared utilities for potential future native integration

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
debug = true
opt-level = 0

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
