[package]
name = "ubuntu-autoinstall-agent"
version = "0.1.0"
edition = "2021"
description = "Automated Ubuntu server deployment with golden images and LUKS encryption"
license = "MIT"
repository = "https://github.com/jdfalk/ubuntu-autoinstall-agent"

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Network Operations
reqwest = { version = "0.11", features = ["stream", "json"] }
ssh2 = "0.9"

# Cryptography
ring = "0.17"
sha2 = "0.10"

# File Operations
tempfile = "3.8"
walkdir = "2.4"
dirs = "5.0"

# System Operations
nix = "0.27"

# Progress Indicators
indicatif = "0.17"

# UUID Generation
uuid = { version = "1.6", features = ["v4"] }

# Futures and async utilities
futures = "0.3"

# Additional dependencies
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

# Note: uutils/coreutils provides reliable cross-platform implementations
# of common Unix utilities. While the crates are primarily binaries,
# they can be installed separately for reliable command execution.
# See: https://github.com/uutils/coreutils

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
